# mt5-grpc

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  justfile  main.py  opencode.json  pyproject.toml
docs/: RESEARCH.md
protobuf/: ticks.proto
protobuf/protos/: account.proto  enums.proto  market_data.proto  market_depth.proto  rates.proto  ticks.proto  trade.proto  types.proto
src/: main.py
src/api/: account.py  exceptions.py  helpers.py  market_data.py  market_depth.py  middleware.py  rates.py  ticks.py  trade.py
src/stubs/: account_pb2.py  account_pb2.pyi  account_pb2_grpc.py  enums_pb2.py  enums_pb2.pyi  enums_pb2_grpc.py  market_data_pb2.py  market_data_pb2.pyi  market_data_pb2_grpc.py  market_depth_pb2.py  market_depth_pb2.pyi  market_depth_pb2_grpc.py  rates_pb2.py  rates_pb2.pyi  rates_pb2_grpc.py  ticks_pb2.py  ticks_pb2.pyi  ticks_pb2_grpc.py  trade_pb2.py  trade_pb2.pyi  trade_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
tests/: conftest.py  test_account.py  test_cli.py  test_market_data.py  test_market_depth.py  test_middleware.py  test_rates.py  test_tick_service.py  test_ticks.py  test_trade.py
