[project]
name = "mt5-grpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
    "metatrader5>=5.0.5735",
]

[dependency-groups]
dev = [
    "grpcio-testing>=1.81.0",
    "pytest>=9.0.3",
]
