[project]
name = "mt5-grpc"
version = "1.3.0"
description = "MT5 gRPC service with authentication, streaming, and comprehensive API coverage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
    "metatrader5>=5.0.5735",
]

[project.scripts]
mt5-grpc = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "grpcio-testing>=1.81.0",
    "pytest>=9.0.3",
]
